<resources>
    <string name="app_name">Medi-Cure</string>
    <string name="corona_details">Coronaviruses (CoV) are a large family of viruses that cause illness
        ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome
        (MERS-CoV) and Severe Acute Respiratory Syndrome (SARS-CoV). A novel coronavirus (nCoV) is a new
        strain that has not been previously identified in humans.
        Coronaviruses are zoonotic, meaning they are transmitted between animals and people.
        Detailed investigations found that SARS-CoV was transmitted from civet cats to humans and MERS-CoV
        from dromedary camels to humans. Several known coronaviruses are circulating in animals that have not
        yet infected humans.
        Common signs of infection include respiratory symptoms, fever, cough, shortness of breath and breathing
        difficulties. In more severe cases, infection can cause pneumonia, severe acute respiratory syndrome,
        kidney failure and even death.
        Standard recommendations to prevent infection spread include regular hand washing,
        covering mouth and nose when coughing and sneezing, thoroughly cooking meat and eggs.
        Avoid close contact with anyone showing symptoms of respiratory illness such as coughing and
        sneezing.</string>
    <string name="tube_details">27 FEBRUARY 2020 - GENEVA In a Rapid Communication issued today,
        the World Health Organization (WHO) is announcing a number of updates to its latest guidance on
        tuberculosis (TB) preventive treatment. These changes are expected to enhance the scale-up of preventive
        treatment worldwide in line with the vision of the WHO End TB Strategy and the UN High-Level Meeting in 2018.
        The release of this Rapid Communication at this juncture is important to inform countries as many of them
        are in the process of developing national TB strategic plans and related funding proposals for donors like
        the Global Fund.
        An estimated one-fourth of the world’s population is infected with the TB bacterium, of whom about 5-10% advance
        to active TB disease in their lifetime. TB preventive treatment, when given to people at the highest risk
        of progressing from TB infection to disease, remains a critical intervention to benefit individuals and
        communities alike. Globally, preventive treatment of people at risk, particularly contacts of TB patients,
        remains low. Unless this is stepped up rapidly, the global target of reaching at least 30 million people
        with TB preventive treatment by 2022 will not be reached.
        “TB preventive treatment is an important cornerstone of the End TB Strategy. Ensuring that everyone can
        obtain the treatment they need, to prevent TB infection from developing into active TB disease,
        will save lives and reduce suffering.” said Dr Tereza Kasaeva, Director of the WHO Global TB Programme.
        “Along with the new guidelines, WHO will release other tools to strengthen uptake and implementation of
        the latest recommendations. We request continued commitment and stakeholder support to rapidly scale up
        access to preventive treatment for the millions in need.”</string>
    <string name="res_info">A type of disease that affects the lungs and other parts of the respiratory system.
        Respiratory diseases include asthma, chronic obstructive pulmonary disease (COPD), pulmonary fibrosis,
        pneumonia, and lung cancer. Also called lung disorder and pulmonary disease. Respiratory diseases, or
        lung diseases, are pathological conditions affecting the organs and tissues that make gas exchange difficult
        in air-breathing animals.
        They include conditions of the respiratory tract including the trachea, bronchi, bronchioles, alveoli,
        pleurae, pleural cavity, and the nerves and muscles of respiration.
    Respiratory diseases range from mild and self-limiting, such as the common cold, to life-threatening diseases
        such as bacterial pneumonia, pulmonary embolism, acute asthma and lung cancer.
    The study of respiratory disease is known as pulmonology.
    A doctor who specializes in respiratory disease is known as a pulmonologist, a chest medicine specialist,
        a respiratory medicine specialist, a respirologist or a thoracic medicine specialist.
    Respiratory diseases can be classified in many different ways, including by the organ or tissue involved,
        by the type and pattern of associated signs and symptoms, or by the cause of the disease.</string>
    <string name="diabetes">Diabetes is a chronic, metabolic disease characterized by elevated levels of blood
        glucose (or blood sugar), which leads over time to serious damage to the heart, blood vessels, eyes,
        kidneys, and nerves. The most common is type 2 diabetes, usually in adults, which occurs when the
        body becomes resistant to insulin or does not make enough insulin. In the past three decades the prevalence
        of type 2 diabetes has risen dramatically in countries of all income levels. Type 1 diabetes, once known as
        juvenile diabetes or insulin-dependent diabetes, is a chronic condition in which the pancreas produces
        little or no insulin by itself. For people living with diabetes, access to affordable treatment,
        including insulin, is critical to their survival. There is a globally agreed target to halt the rise
        in diabetes and obesity by 2025. </string>
    <string name="blood"> Blood pressure (BP) is the pressure of circulating blood on the walls of blood vessels. Most of this pressure is due to work done by the heart by pumping blood through the circulatory system. Used without further specification, "blood pressure" usually refers to the pressure in large arteries of the systemic circulation. Blood pressure is usually expressed in terms of the systolic pressure (maximum during one heartbeat) over diastolic pressure (minimum in between two heartbeats) and is measured in millimeters of mercury (mmHg), above the surrounding atmospheric pressure.
Blood pressure is one of the vital signs, along with respiratory rate, heart rate, oxygen saturation, and body temperature. Normal resting blood pressure, in an adult is approximately 120 millimetres of mercury (16 kPa) systolic, and 80 millimetres of mercury (11 kPa) diastolic, abbreviated "120/80 mmHg". Globally, the average blood pressure, age standardized, has remained about the same since 1975 to the present, at approx. 127/79 mmHg in men and 122/77 mmHg in women, although these average data mask quite large divergent regional trends.[1]
Traditionally, blood pressure was measured non-invasively using auscultation with a mercury-tube sphygmomanometer.[2] Auscultation is still generally considered to be the gold standard of accuracy for non-invasive blood pressure readings in clinic.[3] However, semi-automated methods have become common, largely due to concerns about potential mercury toxicity,[4] although cost, ease of use and applicability to ambulatory blood pressure or home blood pressure measurements have also influenced this trend.[5] Early automated alternatives to mercury-tube sphygmomanometers were often seriously inaccurate, but modern devices validated to international standards achieve an average difference between two standardized reading methods of 5 mm Hg or less and a standard deviation of less than 8 mm Hg.[5] Most of these semi-automated methods measure blood pressure using oscillometry.[6]
Blood pressure is influenced by cardiac output, total peripheral resistance and arterial stiffness and varies depending on situation, emotional state, activity, and relative health/disease states. In the short term, blood pressure is regulated by baroreceptors which act via the brain to influence the nervous and the endocrine systems.  </string>
    <string name="cold_illness">Fever</string>
    <string name="cold_description">Fever, also known as pyrexia and febrile response, is defined as having a temperature above the normal range due to an increase in the body\'s temperature set point. Rarely a fever may trigger a febrile seizure. This is more common in young children.</string>
    <string name="cold_medicine">Crocin Advance, Combiflam for child,  Ibuprofen, paracetamol</string>
    <string name="cold_symptoms">Fever, Sweating, Muscle aches Dehydration.</string>
    <string name="cold_cause">Increase in the body\'s temperature.</string>
    <string name="cold_salt">Paracetamol / Acetaminophen 500mg + Caffeine 32mg + Phenylephrine 10mg</string>
    <string name="cough_illness">Common Cold</string>
    <string name="cough_description">Colds are caused by viruses in the upper respiratory tract. Many young children—especially those in child care—can get 6 to 8 colds per year. Symptoms of a cold (including runny nose, congestion, and cough) may last for up to ten days.
Green mucus in the nose does not automatically mean that antibiotics are needed; common colds never need antibiotics. However, if a sinus infection is suspected, your doctor will carefully decide whether antibiotics are the best choice based on your child\'s symptoms and a physical exam.</string>
    <string name="cough_medicine">Ambrodil, Asthakind, Benadryl</string>
    <string name="cough_symptoms">Tickle in the throat, runny or stuffy nose, sneezing, feel very tired.</string>
    <string name="cough_cause">Most colds are caused by rhinoviruses. Your child can catch a cold through airborne droplets from or through direct contact with a sick person. Sneezing, coughing, and a runny nose are common symptoms.</string>
    <string name="cough_salt">null</string>
    <string name="body_illness">Skin Infection</string>
    <string name="body_description">In most children with skin infections, a skin test (culture or swab) may be needed to determine the most-appropriate treatment. Tell your doctor if your child has a history of MRSA, staph infection, or other resistant bacteria or if he or she has been exposed to other family members or contacts with resistant bacteria.</string>
    <string name="body_medicine">Cetzine syrup,</string>
    <string name="body_symptoms">Red, itchy skin, Rashes, Inflammation and swelling, Fever</string>
    <string name="body_cause">skin infections are caused by bacteria, such as staph and strep, viruses, fungi, or parasites.</string>
    <string name="body_salt">null</string>
    <string name="pneumonia_illness">Ear Pain</string>
    <string name="password">Password</string>
    <string name="menu_home">Profile</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="gender">GENDER:</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="history">History</string>
    <string name="buy_medicine">Buy Medicine</string>
    <string name="profile">Profile</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="your_dob">Your DoB</string>
    <string name="your_gender">Your Gender</string>
    <string name="log_in">LOG IN</string>
    <string name="top_diseases">Top Diseases</string>
</resources>