<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/top_diseases" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/baseline_history_black_18dp"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_buy"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/buy_medicine" />

    <item
        android:id="@+id/contact_us"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="Contact Us"/>


</menu>
