<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9CE09F"
    android:orientation="vertical"
    tools:context=".Sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="2dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button_2"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textSize="60sp" />


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit"
                        android:drawablePadding="10dp"
                        android:hint="Enter Name"
                        android:inputType="textPersonName"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/pas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/con_pas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit"
                        android:drawablePadding="10dp"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:text="@string/gender"
                        android:textColor="#8A8787"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="15sp">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="15sp">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/other"
                        android:layout_width="88dp"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textSize="15sp">

                    </RadioButton>
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit"
                        android:drawablePadding="10dp"
                        android:enabled="true"
                        android:focusable="false"
                        android:hint="@string/enter_date_of_birth"
                        android:inputType="textPersonName"
                        android:onClick="dobb"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:onClick="loog"
                    android:layout_marginEnd="20dp"
                    android:text="Already have an Account"/>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/round_btn"
                    android:onClick="log"
                    android:text="Sign Up"
                    android:textAllCaps="false" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>