<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B7BDEF"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="2dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textSize="60sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="20dp"
                    android:src="@drawable/blank"
                    app:civ_border_color="#0000"
                    app:civ_border_width="2dp" />


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="50dp"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/pas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="50dp"
                        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:text="" />

                <Button
                    android:id="@+id/btn_log"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_button"
                    android:onClick="log"
                    android:text="LogIn"
                    android:textAllCaps="false" />


                <Button
                    android:id="@+id/btn_reg"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/round_btn"
                    android:onClick="sign"
                    android:text="Sign Up"
                    android:textAllCaps="false" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>